--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -64,7 +64,7 @@ img {
 
 #feature-four .feature-content {
   padding: 0; }
-  #feature-four .feature-content blockquote {
+  #feature-four .feature-content h6 {
     margin-top: 8rem; }
 
 #feature-five img {
